--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@liuxingfeiyu/zoo-sdk",
+  "name": "@liuxingfeiyu/byobu-sdk",
   "license": "MIT",
-  "version": "1.0.80",
+  "version": "1.0.0",
   "description": "🛠 An SDK for building applications on top of Sushiswap.",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
